# Rote_cpp-opengl

./: .gitignore  CMakeLists.txt  README.txt
include/: shader.h
include/glad/: glad.h
src/: app.cpp  shader.fs  shader.h  shader.vs  shader_green.fs
